# ROS_gui

./: .gitignore  README.md
ROS_scripts/: README.md  ros_create_catkin_package.sh  ros_create_catkin_workspace.sh  ros_install.sh
can_bus_gui/: CMakeLists.txt  controller_status_plugin.xml  package.xml  plugin.xml  setup.py
can_bus_gui/resource/: can_dashboard.ui  can_start.ui  canbusmain.ui  controller_status.ui
can_bus_gui/scripts/: can_bus_gui  controller_status_widget
can_bus_gui/src/can_bus_gui/: .start_module.py.swp  canbus_dashboard_module.py  controller_status_module.py  monitor_status.py  start_module.py
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/pkgconfig/: my_gui_pkg.pc
devel/lib/python2.7/dist-packages/my_gui_pkg/: __init__.py
devel/share/my_gui_pkg/cmake/: my_gui_pkgConfig.cmake
src/can_bus_gui/: CMakeLists.txt  README.md  canbus_start.ui  package.xml  plugin.xml  setup.py
src/can_bus_gui/resource/: canbusmain.ui
src/can_bus_gui/scripts/: can_bus_gui
src/can_bus_gui/src/can_bus_gui/: start_module.py
src/my_gui_pkg/: CMakeLists.txt  README.md  plugin.xml  setup.py
src/my_gui_pkg/scripts/: my_gui_pkg
src/my_gui_pkg/src/my_gui_pkg/: my_module.py  start_can_bus.py
