<?xml version="1.0"?>
<package format="2"> 
  <name>can_bus_gui</name> 
  <version>0.0.0</version> 
  <description>DESCRIPTION</description> 
  <maintainer email="gcpetri@tamu.edu">Gregory Petri</maintainer> 
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>rqt_gui</build_depend> 
  <build_depend>rqt_gui_py</build_depend> 
  <build_export_depend>rqt_gui</build_export_depend> 
  <build_export_depend>rospy</build_export_depend> 
  <build_export_depend>std_msgs</build_export_depend> 
  <build_export_depend>rqt_gui_py</build_export_depend> 
  <exec_depend>rqt_gui</exec_depend> 
  <exec_depend>rospy</exec_depend> 
  <exec_depend>std_msgs</exec_depend> 
  <exec_depend>rqt_gui_py</exec_depend> 
  <export> 
    <rqt_gui plugin="${prefix}/plugin.xml"/> 
  </export> 
</package> 
